# cipher

./: .gitignore  AGENTS.md  ATTRIBUTION.md  LICENSE  README.md  index.html  install.html  install.sh  package.json  pyproject.toml  test_session.txt  vercel.json
cipher/: __init__.py  __main__.py  agent.py  app.py  client.py  config.py  formatters.py  lsp.py  mcp.py  permissions.py  plugin.py  provider.py  themes.py  tools.py
proxy/: config.json  vercel.json
proxy/api/: chat.js
scripts/: alert.py  headless_test.py  test_cipher.py
shared/: board.md  messages.md
site/: index.html  install.ps1  install.sh  uninstall.ps1  uninstall.sh
site/docs/: index.html
tests/: bench_proxy.py  harness.py  test_comprehensive.py  test_new_systems.py  test_palette_slash.py  test_tui_agent.py
